[gd_scene load_steps=4 format=3 uid="uid://bhq3wqiw5ccme"]

[ext_resource type="Script" path="res://scenes/escapemenu/escapemenu.gd" id="1_6pxjd"]
[ext_resource type="Material" uid="uid://bnx6x0rvqto3" path="res://shaders/vignette.tres" id="2_8ewf4"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ff233"]
load_path = "res://.godot/imported/ecosim_logo.png-cfa8f0d3902929151fbc93c5e5603618.ctex"

[node name="EscapeMenu" type="CanvasLayer"]
script = ExtResource("1_6pxjd")

[node name="Blur" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VignetteEffect" type="ColorRect" parent="."]
material = ExtResource("2_8ewf4")
offset_right = 1280.0
offset_bottom = 720.0

[node name="EcosimLogo" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = 0.7
anchor_right = 0.7
anchor_bottom = 0.5
offset_right = -200.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture = SubResource("CompressedTexture2D_ff233")

[node name="Button1" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -15.5
offset_right = 75.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "...
"

[node name="Button2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 25.5
offset_right = 75.0
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
text = "..."

[node name="Quit" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 224.5
offset_right = 75.0
offset_bottom = 255.5
grow_horizontal = 2
grow_vertical = 2
text = "QUIT
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="Button1" to="." method="_on_button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button2_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
